fix bug - open default parametric experiment as general (ExperimentGn fromcode)

--- a/Skyline_Form/src/main/resources/form.properties
+++ b/Skyline_Form/src/main/resources/form.properties
@@ -90,7 +90,7 @@ ExperimentFor=Experiment (Formulation)
 ExperimentAn=Experiment (Analytical)
 ExperimentPrBT=Experiment (Parametric Bottles)
 ExperimentPrCR=Experiment (Parametric Corrosion)
-ExperimentPrGn=Experiment (Parametric General)
+ExperimentPrGn=Experiment (Parametric)
 ExperimentPrTS=Experiment (Parametric TSU)
 ExperimentPrVS=Experiment (Parametric Viscosity)
 #ExperimentStb for "Taro develop"
