fixed bug 9229 by Tehila

--- a/Skyline_Form/src/main/resources/form.properties
+++ b/Skyline_Form/src/main/resources/form.properties
@@ -181,6 +181,7 @@ SpreadsheetTempla=Spreadsheet Template
 SpreadsheetMain=Spreadsheet Main
 InvItemRecipesMain=Inventory Recipes
 RecipeFormulation=Recipe
+ExperimentReport=Reaction and Results Analysis
 
 
 #maintenance
