updated the spreadsheet results in the analytical general exp with actual data

--- a/Skyline_Form/src/main/resources/formMessages.properties
+++ b/Skyline_Form/src/main/resources/formMessages.properties
@@ -194,3 +194,7 @@ CHECK_COFORMULANT_MATERIAL_NAME_DUPLICATION=The Material {0} is already Exists
 CHECK_HASCOMPONENT=The components table is empty!
 CHECK_COMPOSITION_HAS_FILLER=No material was selected as filler.</br>The {0} cannot be saved.
 NO_REACTION_DATA_IN_SCHEM=No materials or reaction (arrow symbol) found in the scheme!
+INVALID_RESULT_SAMPLE=The following samples are invalid:</br>{0}.</br>Please correct the data.
+INVALID_RESULT_TYPE=The following result types are invalid:</br>{0}.</br>Please correct the data.
+INVALID_MATERIAL_NAME=The following materials are invalid:</br>{0}.</br>Please correct the data.
+INVALID_UNKNOWN_MATERIAL=The following unknown materials already exist in the inventory:</br>{0}</br>Please select them in the material row.
