fix bug 9526 - using jsop parse in order to avoid bas contant in the rich text that damage the html (for example - <table><table>dummy</table></table>)

--- a/Skyline_Form/pom.xml
+++ b/Skyline_Form/pom.xml
@@ -607,9 +607,16 @@
 
 		<!-- https://mvnrepository.com/artifact/com.lowagie/itext -->
 		<dependency>
-		    <groupId>com.lowagie</groupId>
-		    <artifactId>itext</artifactId>
-		    <version>1.4.8</version>
+			<groupId>com.lowagie</groupId>
+			<artifactId>itext</artifactId>
+			<version>1.4.8</version>
+		</dependency>
+	
+		<dependency>
+			<!-- jsoup HTML parser library @ https://jsoup.org/ -->
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.14.1</version>
 		</dependency>
 		
 <!-- 		<dependency> -->
