--- a/Skyline_Form/src/main/resources/formMessages.properties
+++ b/Skyline_Form/src/main/resources/formMessages.properties
@@ -198,3 +198,4 @@ INVALID_RESULT_SAMPLE=The following samples are invalid:</br>{0}.</br>Please cor
 INVALID_RESULT_TYPE=The following result types are invalid:</br>{0}.</br>Please correct the data.
 INVALID_MATERIAL_NAME=The following materials are invalid:</br>{0}.</br>Please correct the data.
 INVALID_UNKNOWN_MATERIAL=The following unknown materials already exist in the inventory:</br>{0}</br>Please select them in the material row.
+INVALID_SPREADSHEETRESULT_MISSING_DATA=Some mandatory fields in the Spreadsheet Results are missing (RT/Result Type).</br>Please fill them in order to save the experiment.
