adding general screen to Reaction and Results Analysis Report

--- a/Skyline_Form/src/main/resources/form.properties
+++ b/Skyline_Form/src/main/resources/form.properties
@@ -171,7 +171,7 @@ ParamMonitoring=Parameters Monitoring
 ExpSeriesCreation=Create Experiment Series
 TemplateMenuMain=Template Main Menu 
 ExpAnalysisReport=Experiment Analysis Report
-ExpAnalyReportMain=Experiment Analysis Report Management
+ExpAnalyReportMain=Report Management
 FGMessagesReport=Messages Summary Report
 FGSeriesReport=Experiment Series List
 ExperimAuditTrail=Experiment Version
