--- a/Skyline_Form/src/main/resources/formMessages.properties
+++ b/Skyline_Form/src/main/resources/formMessages.properties
@@ -199,3 +199,4 @@ INVALID_RESULT_TYPE=The following result types are invalid:</br>{0}.</br>Please 
 INVALID_MATERIAL_NAME=The following materials are invalid:</br>{0}.</br>Please correct the data.
 INVALID_UNKNOWN_MATERIAL=The following unknown materials already exist in the inventory:</br>{0}</br>Please select them in the material row.
 INVALID_SPREADSHEETRESULT_MISSING_DATA=Some mandatory fields in the Spreadsheet Results are missing.</br>Missing field is Result Type.</br>Please fill it in order to save the experiment.
+CHECK_CANCELLED_MATERIALS=The following materials are cancelled:</br>{0}.</br>Please remove them from the spreadsheet results.
