--- a/Skyline_Form/src/main/resources/formMessages.properties
+++ b/Skyline_Form/src/main/resources/formMessages.properties
@@ -201,3 +201,4 @@ INVALID_UNKNOWN_MATERIAL=The following unknown materials already exist in the in
 INVALID_SPREADSHEETRESULT_MISSING_DATA=Some mandatory fields in the Spreadsheet Results are missing.</br>Missing field is Result Type.</br>Please fill it in order to save the experiment.
 CHECK_CANCELLED_MATERIALS=The following materials are cancelled:</br>{0}.</br>Please remove them from the spreadsheet results.
 CHECK_ALL_OR_CURRENT_PAGE=Would you like to un/check all the pages or the current page only?
+EXPAN_MULTIPLE_RESULT=Please notice that you are about to save multiple result with the same material, sample and type. Are you sure you want to continue?
