develop min env clean button event adama and general bl adama + add dynamic report code and DB forms
+ clean form.properties (label - adama)

--- a/Skyline_Form/src/main/resources/form.properties
+++ b/Skyline_Form/src/main/resources/form.properties
@@ -1,187 +1,11 @@
 #labels
-Completion_Date=Completion Date
-Username=Username
-Sub-Project_number=Sub-Project number
-Password=Password
-User_ldap=User ldap
-Sub-Sub-Project_name=Sub-Sub-Project name
-Status=Status
-Sub-Sub-Project_number=Sub-Sub-Project number
-Project_name=Project name
-Group=Group
-Document=Document
-Sub-Project_Type=Sub-Project Type
-Deleted=Deleted
-First_name=First name
-Weight_(kg)=Weight (kg)
-Sub-Project_name=Sub-Project name
-Site=Site
-Last_retry=Last retry
-Formulation_type=Formulation type
-Sub-Project_type=Sub-Project type
-Volume_(liter)=Volume (liter)
-Password_date=Password date
-Created_by=Created by
-Laboratory=Laboratory
-Active_ingredient_type=Active ingredient type
-Group_Name=Group Name
-Retry=Retry
-Comments=Comments
-Creation_Date=Creation Date
-Project_number=Project number
-Last_name=Last name
-User_role=User role
-Planning_level=Planning level
-Start_Date=Start Date
-Estimated_Start_Date=Estimated Start Date
-Change_password_date=Change password date
-Position=Position
-Name=Name
-Change_password=Change password
-Locked=Locked
-Planning_required=Planning required
-Project_manager=Project manager
-MCW_code=MCW code
-Aim=Aim
-Unit=Unit
-Description=Description
-Project_type=Project type
-User=User
-Email=Email
-Last_password_date=Last password date
-ACTIVE_INGREDIENT_MISSING=Please add at least one Active Ingredient
-crystalsReduction = Crystals Reduction
-resultAFeeding = Result after Feeding
-resultAWashing = Result after Washing
-calculationRes = Result
-flashPointTemperature = Flash Point Temperature
-WetSieve = Wet Sieve
-resultZero = Result (zero point)
-resultMinute = Result (1 minute)
-phaseSeparation = Phase Separation
-meanCorrosionRate = Mean Corrosion Rate
-ActiveIngredient=Assay
-Impurity=Impurity Percent
-sampleTable=Sample Number
-sampleName=Sample Name
-expDocumentsSample=document
-expChromatogramsSample=chromatogram
+
 
 #tabs
 
 #formCodes <form entity name> (<form code name for the forms that are mapped to other form entity>)
-InvItemMaterial=Material
-InvItemMaterialFr=Material (Formulation)
-InvItemMaterialPr=Material (Premix)
-#kd 29072020 changed Materials Main to Inventory Materials Task-25483
-InvItemMaterialsMain=Inventory Materials
-InvItemColumnsMain=Inventory Columns
-#kd 29072020 changed Instruments Main to Inventory Instruments Task-25483
-InvItemInstrumentsMain=Inventory Instruments 
-InvItemInstrument=Instrument
-InvItemMaintenance=Inventory Maintenance
-#kd 29072020 changed Samples Main to Inventory Samples Task-25483
-InvItemSamplesMain =Inventory Samples 
-InvItemBatch=Batch
-InvItemCalibration=Calibration
-InvItemColumn=Column
-Experiment=Experiment (Organic)
-ExperimentFor=Experiment (Formulation)
-ExperimentAn=Experiment (Analytical)
-ExperimentPrBT=Experiment (Parametric Bottles)
-ExperimentPrCR=Experiment (Parametric Corrosion)
-ExperimentPrGn=Experiment (Parametric)
-ExperimentPrTS=Experiment (Parametric TSU)
-ExperimentPrVS=Experiment (Parametric Viscosity)
-#ExperimentStb for "Taro develop"
-ExperimentStb=Experiment (Stability)
-#ExperimentCP for "Continuous Process"
-ExperimentCP=Experiment (Continuous Process)
-StepFr=Step
-SelfTest=Self-Test
-STestAppearance=SelfTest (Appearance)
-STestCold=SelfTest (Cold Test)
-STestDensity=SelfTest (Density)
-STestEmulsionStab=SelfTest (Emulsion Stability)
-STestFlashPoint=SelfTest (Flash Point)
-STestFoaming=SelfTest (Foaming)
-STestParticleSize=SelfTest (Particle Size)
-STestPourability=SelfTest (Pourability)
-STestSuspensibilit=SelfTest (Suspensibility)
-STestViscosity=SelfTest (Viscosity)
-STestWetSieve=SelfTest (Wet Sieve)
-STestpH=SelfTest (pH)
-MaterialRef=Reaction
-WorkupCrystallize=Workup (Crystallization)
-WorkupDistillation=Workup (Distillation)
-WorkupDrying=Workup (Drying)
-WorkupFeeding=Workup (Feeding)
-WorkupFiltration=Workup (Filtration)
-WorkupWashExtract=Workup (Washing/Extraction)
-ResultAuditTrail=Result
-WebixAuditTrail=Edit Table
-SearchReport=Search
-BatchFrSelect=Batch Table
-BatchMain=Batch Main
-BatchSelect=Batch Table
-ColumnSelect=Column Table
-ExperimentSelect=Experiment Table
-FormulantRef=Formulation Table
-GroupsCrew=Group Table
-InstrumentRef=Instrument Table
-PreperationRef=Preperation Table
-RequestSelect=Request Table
-SampleMain=Sample Main
-TempExperimeSelect=Experiment Table
-TemplateExpSelect=Experiment Table
-SampleSelect=Samples Table
-WuFeedMaterialRef=Material Table
-WuCryMixDefineRef=Starting Mixture Definition Table
-WuCrystSolventRef=Solvent Definition Table
-WuCrystMonitorRef=Monitoring Table
-WuCryMotherLiqRef=Mother Liquor Table
-WuFiltraWashingRef=Washing Table
-WuDryingRef=Drying Table
-WuWashLiquidAddRef=Washing Liquid Addition Table
-WuWashExtSeparRef=Separation Table
-WuWashExtInterRef=Interphase Formation Table
-WuDistStartMixRef=Starting Mixture Definition Table
-WuFiltraLSqueezRef=Last Squeezing Table
-WuFiltraSqueezRef=Squeezing Table
-WuFiltraFeedRef=Feeding Table
-WuFiltraWetCakeRef=Wet Cake Table
-WuDistilMonitorRef=Monitoring Table
-WuFeedMonitgRef=Material Monitoring Table
-WuDistFractionRef=Fractions and Mass Ballance Table
-WuDistilYieldRef=Yield Calculations Table
-ManualResultsRef=Manual Results Table
-MassBalanceRef=Mass Ballance Table
-ResultRef=Result Table
-ManualResultsMSRef=Manual Results Table
-PrManualResultRef=Manual Results Table
-SpecificationRef=Specification Table
-EquipmentRef=Equipment Table
-SampleDataRef=Samples Table
-ExpParamsCrRef=Results Table
-TempGradientRef=Temperature Gradient Table
-ExpParameterRef=Parameters Table
-FormulationPropRef=Formulation Properties In Planned Experiments Table
-FeedbackRef=Feedback Table
-ParamMonitoring=Parameters Monitoring
-ExpSeriesCreation=Create Experiment Series
-TemplateMenuMain=Template Main Menu 
-ExpAnalysisReport=Experiment Analysis Report
-ExpAnalyReportMain=Report Management
-FGMessagesReport=Messages Summary Report
-FGSeriesReport=Experiment Series List
-ExperimAuditTrail=Experiment Version
-DynamicReport=Dynamic Report
-UserGuideViewer=User Guide
-SpreadsheetTempla=Spreadsheet Template
-SpreadsheetMain=Spreadsheet Main
-InvItemRecipesMain=Inventory Recipes
-RecipeFormulation=Recipe
-ExperimentReport=Reaction and Results Analysis
+TestForm=Test Form
+TestFormList=Test Form List
 
 
 #maintenance
