--- a/Skyline_Form/src/main/resources/app_cloud.properties
+++ b/Skyline_Form/src/main/resources/app_cloud.properties
@@ -17,11 +17,11 @@ ldapUrl=ldap://192.168.0.3:389
 # !IMPORTANT Version and App Title
 #-------------------------------------------------------------------------------
 #loginPageProp should be the name of the war (when we back from an error page we using this: <domain>/<loginPageProp>)
-loginPageProp=AdamaUX
+loginPageProp=GeneralUX
 #appTitle will be display as the application title along with Env (the version number)
-appTitle=AdamaUX
+appTitle=GeneralUX
 #EnvTitle will be display in the login screen title along with Env (the version number)
-EnvTitle=Adama Cloud ELN v.
+EnvTitle=General Cloud ELN v.
 #Env as version number
 Env=1.508
 build.timestamp=12082019
@@ -30,11 +30,11 @@ build.revision=0fc02c075101b244686453b86d25706ebacfca04
 #-------------------------------------------------------------------------------
 # !IMPORTANT Path to webapps folder
 #-------------------------------------------------------------------------------
-jspPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\AdamaUX\\skylineFormWebapp\\jsp
-ireportPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\AdamaUX\\skylineFormWebapp\\ireport_pool
-HtmlPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\AdamaUX\\skylineFormWebapp\\html_pool
-wfPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\AdamaUX\\skylineFormWebapp\\wf_pool
-imagePath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\AdamaUX\\skylineFormWebapp\\images
+jspPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\GeneralUX\\skylineFormWebapp\\jsp
+ireportPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\GeneralUX\\skylineFormWebapp\\ireport_pool
+HtmlPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\GeneralUX\\skylineFormWebapp\\html_pool
+wfPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\GeneralUX\\skylineFormWebapp\\wf_pool
+imagePath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\GeneralUX\\skylineFormWebapp\\images
 
 #-------------------------------------------------------------------------------
 # !IMPORTANT Permission mode ignorePermissions=1 -> for ignore permissions
@@ -56,18 +56,18 @@ savePropImp=ServiceProduction
 #-------------------------------------------------------------------------------
 #customer service
 #-------------------------------------------------------------------------------
-customerIntegrationCalcPropImp=AdamaIntegrationCalc
-customerIntegrationWFPropImp=AdamaIntegrationWF
+customerIntegrationCalcPropImp=GeneralIntegrationCalc
+customerIntegrationWFPropImp=GeneralIntegrationWF
 customerIntegrationEventPropImp=AdamIntegrationEvent
-customerIntegrationImpPropImp=AdamaIntegrationImp
-customerIntegrationDTPropImp=AdamaIntegrationDT
-customerIntegrationInitFormPropImp=AdamaIntegrationInitForm
-customerIntegrationValidationPropImp=AdamaIntegrationValidation
+customerIntegrationImpPropImp=GeneralIntegrationImp
+customerIntegrationDTPropImp=GeneralIntegrationDT
+customerIntegrationInitFormPropImp=GeneralIntegrationInitForm
+customerIntegrationValidationPropImp=GeneralIntegrationValidation
 
 #-------------------------------------------------------------------------------
 # Logback file
 #-------------------------------------------------------------------------------
-logPath=c:\\Logs\\AdamaEln.log
+logPath=c:\\Logs\\GeneralEln.log
 
 #-------------------------------------------------------------------------------
 # BD log 
