--- a/Skyline_Form/src/main/resources/app_comply.properties
+++ b/Skyline_Form/src/main/resources/app_comply.properties
@@ -20,17 +20,17 @@ file.maxUploadSize=209715200
 #-------------------------------------------------------------------------------
 isLdapAuthentication=0
 ldapUrl=ldap://192.168.211.15:389
-helpUrl=https://adama.service-now.com
+helpUrl=https://general.service-now.com
 
 #-------------------------------------------------------------------------------
 # !IMPORTANT Version and App Title
 #-------------------------------------------------------------------------------
 #loginPageProp should be the name of the war (when we back from an error page we using this: <domain>/<loginPageProp>)
-loginPageProp=AdamaUX
+loginPageProp=GeneralUX
 #appTitle will be display as the application title along with Env (the version number)
-appTitle=AdamaUX
+appTitle=GeneralUX
 #EnvTitle will be display in the login screen title along with Env (the version number)
-EnvTitle=AdamaUX ELN v.
+EnvTitle=GeneralUX ELN v.
 #Env as version number
 Env=1.739
 build.timestamp=12042021
@@ -39,11 +39,11 @@ build.revision=c50b89236c3efecc4f332426bac19304a5a1a444
 #-------------------------------------------------------------------------------
 # !IMPORTANT Path to webapps folder
 #-------------------------------------------------------------------------------
-jspPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\AdamaUX\\skylineFormWebapp\\jsp
-ireportPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\AdamaUX\\skylineFormWebapp\\ireport_pool
-HtmlPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\AdamaUX\\skylineFormWebapp\\html_pool
-wfPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\AdamaUX\\skylineFormWebapp\\wf_pool
-imagePath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\AdamaUX\\skylineFormWebapp\\images
+jspPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\GeneralUX\\skylineFormWebapp\\jsp
+ireportPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\GeneralUX\\skylineFormWebapp\\ireport_pool
+HtmlPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\GeneralUX\\skylineFormWebapp\\html_pool
+wfPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\GeneralUX\\skylineFormWebapp\\wf_pool
+imagePath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\GeneralUX\\skylineFormWebapp\\images
 
 #-------------------------------------------------------------------------------
 # !IMPORTANT Permission mode ignorePermissions=1 -> for ignore permissions
@@ -67,18 +67,18 @@ savePropImp=ServiceProduction
 #-------------------------------------------------------------------------------
 #customer service
 #-------------------------------------------------------------------------------
-customerIntegrationCalcPropImp=AdamaIntegrationCalc
-customerIntegrationWFPropImp=AdamaIntegrationWF
+customerIntegrationCalcPropImp=GeneralIntegrationCalc
+customerIntegrationWFPropImp=GeneralIntegrationWF
 customerIntegrationEventPropImp=AdamIntegrationEvent
-customerIntegrationImpPropImp=AdamaIntegrationImp
-customerIntegrationDTPropImp=AdamaIntegrationDT
-customerIntegrationInitFormPropImp=AdamaIntegrationInitForm
-customerIntegrationValidationPropImp=AdamaIntegrationValidation
+customerIntegrationImpPropImp=GeneralIntegrationImp
+customerIntegrationDTPropImp=GeneralIntegrationDT
+customerIntegrationInitFormPropImp=GeneralIntegrationInitForm
+customerIntegrationValidationPropImp=GeneralIntegrationValidation
 
 #-------------------------------------------------------------------------------
 # Logback file
 #-------------------------------------------------------------------------------
-logPath=c:\\Logs\\AdamaEln.log
+logPath=c:\\Logs\\GeneralEln.log
 
 #-------------------------------------------------------------------------------
 # BD log 
