--- a/Skyline_Form/src/main/resources/app_develop.properties
+++ b/Skyline_Form/src/main/resources/app_develop.properties
@@ -19,19 +19,19 @@ sqlTimeOut=2400
 #-------------------------------------------------------------------------------
 isLdapAuthentication=0
 ldapUrl=ldap://192.168.10.2:389
-helpUrl=https://adama.service-now.com
+helpUrl=https://general.service-now.com
 
 #-------------------------------------------------------------------------------
 # !IMPORTANT Version and App Title
 #-------------------------------------------------------------------------------
 #Company
-appCompany=Adama
+appCompany=General
 #loginPageProp should be the name of the war (when we back from an error page we using this: <domain>/<loginPageProp>)
-loginPageProp=Adama
+loginPageProp=General
 #appTitle will be display as the application title along with Env (the version number)
-appTitle=Adama ELN
+appTitle=General ELN
 #EnvTitle will be display in the login screen title along with Env (the version number)
-EnvTitle=Adama ELN v.
+EnvTitle=General ELN v.
 #Env as version number
 Env=1
 build.timestamp=xxxxxxx
@@ -66,18 +66,18 @@ savePropImp=ServiceProduction
 #-------------------------------------------------------------------------------
 #customer service
 #-------------------------------------------------------------------------------
-#customerIntegrationCalcPropImp=AdamaIntegrationCalc
-#customerIntegrationWFPropImp=AdamaIntegrationWF
+#customerIntegrationCalcPropImp=GeneralIntegrationCalc
+#customerIntegrationWFPropImp=GeneralIntegrationWF
 #customerIntegrationEventPropImp=AdamIntegrationEvent
-#customerIntegrationImpPropImp=AdamaIntegrationImp
-#customerIntegrationDTPropImp=AdamaIntegrationDT
-#customerIntegrationInitFormPropImp=AdamaIntegrationInitForm
-#customerIntegrationValidationPropImp=AdamaIntegrationValidation
+#customerIntegrationImpPropImp=GeneralIntegrationImp
+#customerIntegrationDTPropImp=GeneralIntegrationDT
+#customerIntegrationInitFormPropImp=GeneralIntegrationInitForm
+#customerIntegrationValidationPropImp=GeneralIntegrationValidation
 
 #-------------------------------------------------------------------------------
 # Logback file
 #-------------------------------------------------------------------------------
-logPath=c:\\Logs\\AdamaUX.log
+logPath=c:\\Logs\\GeneralUX.log
 
 #-------------------------------------------------------------------------------
 # BD log 
