--- a/Skyline_Form/src/main/resources/app_devtest.properties
+++ b/Skyline_Form/src/main/resources/app_devtest.properties
@@ -18,17 +18,17 @@ file.maxUploadSize=209715200
 #-------------------------------------------------------------------------------
 isLdapAuthentication=0
 ldapUrl=ldap://192.168.211.15:389
-helpUrl=https://adama.service-now.com
+helpUrl=https://general.service-now.com
 
 #-------------------------------------------------------------------------------
 # !IMPORTANT Version and App Title
 #-------------------------------------------------------------------------------
 #loginPageProp should be the name of the war (when we back from an error page we using this: <domain>/<loginPageProp>)
-loginPageProp=AdamaDevTest
+loginPageProp=GeneralDevTest
 #appTitle will be display as the application title along with Env (the version number)
-appTitle=AdamaDevTest
+appTitle=GeneralDevTest
 #EnvTitle will be display in the login screen title along with Env (the version number)
-EnvTitle=AdamaDevTest ELN v.
+EnvTitle=GeneralDevTest ELN v.
 #Env as version number - for make the datatale deffer bug not in cachae
 Env=1.737
 build.timestamp=24032021
@@ -37,11 +37,11 @@ build.revision=e9a622be8b20e757b009183ee10fe2090ac72eee
 #-------------------------------------------------------------------------------
 # !IMPORTANT Path to webapps folder
 #-------------------------------------------------------------------------------
-jspPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\AdamaDevTest\\skylineFormWebapp\\jsp
-ireportPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\AdamaDevTest\\skylineFormWebapp\\ireport_pool
-HtmlPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\AdamaDevTest\\skylineFormWebapp\\html_pool
-wfPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\AdamaDevTest\\skylineFormWebapp\\wf_pool
-imagePath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\AdamaDevTest\\skylineFormWebapp\\images
+jspPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\GeneralDevTest\\skylineFormWebapp\\jsp
+ireportPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\GeneralDevTest\\skylineFormWebapp\\ireport_pool
+HtmlPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\GeneralDevTest\\skylineFormWebapp\\html_pool
+wfPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\GeneralDevTest\\skylineFormWebapp\\wf_pool
+imagePath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\GeneralDevTest\\skylineFormWebapp\\images
 
 #-------------------------------------------------------------------------------
 # !IMPORTANT Permission mode ignorePermissions=1 -> for ignore permissions
@@ -65,18 +65,18 @@ savePropImp=ServiceProduction
 #-------------------------------------------------------------------------------
 #customer service
 #-------------------------------------------------------------------------------
-customerIntegrationCalcPropImp=AdamaIntegrationCalc
-customerIntegrationWFPropImp=AdamaIntegrationWF
+customerIntegrationCalcPropImp=GeneralIntegrationCalc
+customerIntegrationWFPropImp=GeneralIntegrationWF
 customerIntegrationEventPropImp=AdamIntegrationEvent
-customerIntegrationImpPropImp=AdamaIntegrationImp
-customerIntegrationDTPropImp=AdamaIntegrationDT
-customerIntegrationInitFormPropImp=AdamaIntegrationInitForm
-customerIntegrationValidationPropImp=AdamaIntegrationValidation
+customerIntegrationImpPropImp=GeneralIntegrationImp
+customerIntegrationDTPropImp=GeneralIntegrationDT
+customerIntegrationInitFormPropImp=GeneralIntegrationInitForm
+customerIntegrationValidationPropImp=GeneralIntegrationValidation
 
 #-------------------------------------------------------------------------------
 # Logback file
 #-------------------------------------------------------------------------------
-logPath=c:\\Logs\\AdamaEln.log
+logPath=c:\\Logs\\GeneralEln.log
 
 #-------------------------------------------------------------------------------
 # BD log 
