--- a/Skyline_Form/src/test/resources/app.properties
+++ b/Skyline_Form/src/test/resources/app.properties
@@ -3,11 +3,11 @@ jdbc.driverClassName=oracle.jdbc.OracleDriver
 jdbc.url=jdbc:oracle:thin:@192.168.10.110:1521:skyline
 jdbc.username=skyline_form
 jdbc.password=skynew75321
-#chromedriver (in the git it is under -  Adama\Doc\Installation\Tool_chromedriver\chromedriver.exe.)
+#chromedriver (in the git it is under -  General\Doc\Installation\Tool_chromedriver\chromedriver.exe.)
 chromedriverPath=C:/Logs/chromedriver.exe
 #APP
 login_user_userId=100
-login_url=http://localhost:8080/Adama
+login_url=http://localhost:8080/General
 #UNITTEST_LEVEL csv of number represent test level of check from basic to advanced   - 1 - basic , 2 - deeper ... (based on this we run FG_UNITTEST.doDBValidation DB function and the maintenance scripts)
 unittest_level=1
 #1 - ignore db validation, 0 run, db validation
