app prop update

--- a/Skyline_Form/src/main/resources/appUX.properties
+++ b/Skyline_Form/src/main/resources/appUX.properties
@@ -25,17 +25,17 @@ helpUrl=https://TODO_SUPPORT_URL
 # !IMPORTANT Version and App Title
 #-------------------------------------------------------------------------------
 #Company
-appCompany=General
+appCompany=Prigat
 #loginPageProp should be the name of the war (when we back from an error page we using this: <domain>/<loginPageProp>)
-loginPageProp=General
+loginPageProp=Prigat
 #appTitle will be display as the application title along with Env (the version number)
-appTitle=General ELN
+appTitle=Prigat
 #EnvTitle will be display in the login screen title along with Env (the version number)
-EnvTitle=General ELN v.
+EnvTitle=Prigat v.
 #Env as version number
-Env=1
-build.timestamp=xxxxxxx
-build.revision=xxxxxxxxxxxxxxxxxxxxxxxxx
+Env=1.0
+build.timestamp=28112921
+build.revision=e2dde38cf8a4553668bcffb24206454ca9a345ed
 
 #-------------------------------------------------------------------------------
 # !IMPORTANT Path to webapps folder
