--- a/Skyline_Form/src/main/resources/appUX.properties
+++ b/Skyline_Form/src/main/resources/appUX.properties
@@ -40,11 +40,11 @@ build.revision=e2dde38cf8a4553668bcffb24206454ca9a345ed
 #-------------------------------------------------------------------------------
 # !IMPORTANT Path to webapps folder
 #-------------------------------------------------------------------------------
-jspPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\Progat\\skylineFormWebapp\\jsp
-ireportPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\Progat\\skylineFormWebapp\\ireport_pool
-HtmlPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\Progat\\skylineFormWebapp\\html_pool
-wfPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\Progat\\skylineFormWebapp\\wf_pool
-imagePath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\Progat\\skylineFormWebapp\\images
+jspPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\Prigat\\skylineFormWebapp\\jsp
+ireportPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\Prigat\\skylineFormWebapp\\ireport_pool
+HtmlPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\Prigat\\skylineFormWebapp\\html_pool
+wfPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\Prigat\\skylineFormWebapp\\wf_pool
+imagePath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\Prigat\\skylineFormWebapp\\images
 
 #-------------------------------------------------------------------------------
 # !IMPORTANT Permission mode ignorePermissions=1 -> for ignore permissions
