--- a/Skyline_Form/src/main/resources/appUX.properties
+++ b/Skyline_Form/src/main/resources/appUX.properties
@@ -25,13 +25,13 @@ helpUrl=https://TODO_SUPPORT_URL
 # !IMPORTANT Version and App Title
 #-------------------------------------------------------------------------------
 #Company
-appCompany=Prigat
+appCompany=PrigatUX
 #loginPageProp should be the name of the war (when we back from an error page we using this: <domain>/<loginPageProp>)
-loginPageProp=Prigat
+loginPageProp=PrigatUX
 #appTitle will be display as the application title along with Env (the version number)
-appTitle=Prigat
+appTitle=PrigatUX
 #EnvTitle will be display in the login screen title along with Env (the version number)
-EnvTitle=Prigat v.
+EnvTitle=PrigatUX v.
 #Env as version number
 Env=1.0
 build.timestamp=28112921
@@ -40,11 +40,11 @@ build.revision=e2dde38cf8a4553668bcffb24206454ca9a345ed
 #-------------------------------------------------------------------------------
 # !IMPORTANT Path to webapps folder
 #-------------------------------------------------------------------------------
-jspPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\Prigat\\skylineFormWebapp\\jsp
-ireportPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\Prigat\\skylineFormWebapp\\ireport_pool
-HtmlPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\Prigat\\skylineFormWebapp\\html_pool
-wfPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\Prigat\\skylineFormWebapp\\wf_pool
-imagePath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\Prigat\\skylineFormWebapp\\images
+jspPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\PrigatUX\\skylineFormWebapp\\jsp
+ireportPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\PrigatUX\\skylineFormWebapp\\ireport_pool
+HtmlPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\PrigatUX\\skylineFormWebapp\\html_pool
+wfPath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\PrigatUX\\skylineFormWebapp\\wf_pool
+imagePath=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5\\webapps\\PrigatUX\\skylineFormWebapp\\images
 
 #-------------------------------------------------------------------------------
 # !IMPORTANT Permission mode ignorePermissions=1 -> for ignore permissions
