!FORM BUILDER IMPROVE - 1) make additional data element config - check as default
in the DB obj (need to be check again before using in other branches!)
2) improve tool deleteFormData (drop also db object if param = 2)
3) improve FG_SET_STRUCT_PIVOT_TABLE - using only alter table (-> more
simple code then re-create using pivot)

--- a/Skyline_Form/src/main/resources/formBuilder.properties
+++ b/Skyline_Form/src/main/resources/formBuilder.properties
@@ -41,6 +41,6 @@ Element=Element
 Catalog=Catalog
 Report=Report
 DeleteDataForForm=Delete Data for Form
-DeleteDef=Delete Def (0 - not delete, 1 - delete)
+DeleteDef=Delete Def (0 - not delete, 1 - delete, 2 - drop tables and views)
 DataMigrationParam=Parameter (if it's empty, then use default/app.properties value for parameter)
 #updateCache=Update cache and prepare data
