develop prigat application screen

--- a/Skyline_Form/src/main/resources/formMessages.properties
+++ b/Skyline_Form/src/main/resources/formMessages.properties
@@ -1,4 +1,7 @@
 #messages
+#PRIGAT
+REMOVE_LINK_ITEM=Are you sure you want to delete this item?
+#ADAMA
 ELEMENT_GENERAL_CONFIRM=Some other column properties<br>might be changed
 confirmWithOutSaveMessage=Are you sure you want to leave the form without saving?
 pleaseWait=Please wait...
